--- a/env.example
+++ b/env.example
@@ -41,3 +41,7 @@ SUBSCRIPTION_PRICE_3=199.00
 SUBSCRIPTION_PRICE_6=349.00
 SUBSCRIPTION_PRICE_12=469.00
 SUBSCRIPTION_CURRENCY=RUB
+
+# Telegram бот
+TG_TOKEN=your-telegram-bot-token
+TG_ID=your-telegram-admin-id
