--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
       run: pip install pylint
     
     - name: Run pylint
-      run: pylint --disable=all --enable=E,W,F *.py
+      run: pylint --disable=all --enable=E,W,F --disable=unused-import *.py
