--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,113 +78,9 @@ jobs:
         cache-to: type=gha,mode=max
         platforms: linux/amd64
 
-  release:
-    name: 🚀 Create Release & Package
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/TEST'
-    outputs:
-      version: ${{ steps.version.outputs.new_version }}
-    steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: 🔧 Setup Git
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
-    
-    - name: 📈 Calculate version
-      id: version
-      run: |
-        # Получаем последний тег
-        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-        echo "📌 Last tag: $LAST_TAG"
-        
-        # Парсим версию
-        IFS='.' read -r major minor patch <<< "$LAST_TAG"
-        
-        # Увеличиваем patch версию
-        patch=$((patch + 1))
-        
-        NEW_VERSION="$major.$minor.$patch"
-        echo "🎯 New version: $NEW_VERSION"
-        echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-    
-    - name: 🏷️ Prepare release info
-      run: |
-        TAG_NAME="v${{ steps.version.outputs.new_version }}"
-        echo "🏷️ Preparing release: $TAG_NAME"
-        echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-    
-    - name: 📦 Create source package
-      run: |
-        echo "📦 Creating source package..."
-        # Создаем временную директорию для архивации
-        mkdir -p temp_package
-        # Копируем файлы, исключая ненужные
-        rsync -av --exclude='.git' \
-          --exclude='__pycache__' \
-          --exclude='*.pyc' \
-          --exclude='.env' \
-          --exclude='app.db' \
-          --exclude='logs' \
-          --exclude='temp_package' \
-          --exclude='.github/workflows' \
-          . temp_package/
-        # Создаем архив из временной директории
-        tar -czf cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz -C temp_package .
-        # Удаляем временную директорию
-        rm -rf temp_package
-        echo "✅ Source package created: cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz"
-    
-    - name: 📝 Create GitHub Release with Package
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        files: cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz
-        tag_name: v${{ steps.version.outputs.new_version }}
-        name: 🚀 Release v${{ steps.version.outputs.new_version }}
-        generate_release_notes: true
-        body: |
-          ## 🎉 New Release v${{ steps.version.outputs.new_version }}
-          
-          ### ✅ Quality Checks
-          - **Code Quality**: All flake8 checks passed
-          - **Python Version**: 3.11
-          - **Tests**: Basic import tests passed
-          
-          ### 🐳 Docker Images
-          - **Latest**: `${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest`
-          - **Tagged**: `${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}`
-          
-          ### 📦 Packages
-          - **Source Code**: `cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz`
-          
-          ### 🚀 How to use
-          ```bash
-          # Pull latest image
-          docker pull ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          
-          # Run container
-          docker run -d -p 8001:8001 \
-            -e SECRET_KEY=your-secret-key \
-            -e DATABASE_URL=sqlite:///app.db \
-            ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          ```
-          
-          ---
-          *🤖 This release was created automatically by GitHub Actions*
-        draft: false
-        prerelease: false
-
   deploy:
     name: 🚀 Deploy Summary
-    needs: [build, release]
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/TEST'
     steps:
@@ -193,6 +89,11 @@ jobs:
         echo "🎉 Deployment completed successfully!"
         echo "🐳 Docker Image: ${{ needs.build.outputs.image }}"
         echo "📝 Digest: ${{ needs.build.outputs.digest }}"
-        echo "🏷️ Version: v${{ needs.release.outputs.version }}"
-        echo "📦 Package: cysu-source-v${{ needs.release.outputs.version }}.tar.gz"
-        echo "🔗 Release: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.version }}"
+        echo "🏷️ Commit: ${{ github.sha }}"
+        echo "🔗 Repository: https://github.com/${{ github.repository }}"
+        echo ""
+        echo "📋 To create a release manually:"
+        echo "1. Go to https://github.com/${{ github.repository }}/releases"
+        echo "2. Click 'Create a new release'"
+        echo "3. Create tag: v0.0.1 (or next version)"
+        echo "4. Add release notes and attach files"
