--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,22 @@
 name: 🚀 Build & Deploy
 
 on:
-  push:
-    branches: [ TEST ]
-  pull_request:
-    branches: [ TEST ]
   workflow_dispatch:
+    inputs:
+      version_type:
+        description: 'Version increment type'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+        - patch
+        - minor
+        - major
+      create_release:
+        description: 'Create GitHub release'
+        required: true
+        default: true
+        type: boolean
 
 env:
   DOCKER_REGISTRY: docker.io
@@ -82,7 +93,7 @@ jobs:
     name: 🚀 Create Release & Package
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/TEST'
+    if: github.event.inputs.create_release == 'true'
     outputs:
       version: ${{ steps.version.outputs.new_version }}
     steps:
@@ -107,11 +118,24 @@ jobs:
         # Парсим версию
         IFS='.' read -r major minor patch <<< "$LAST_TAG"
         
-        # Увеличиваем patch версию
-        patch=$((patch + 1))
+        # Увеличиваем версию в зависимости от выбранного типа
+        case "${{ github.event.inputs.version_type }}" in
+          "major")
+            major=$((major + 1))
+            minor=0
+            patch=0
+            ;;
+          "minor")
+            minor=$((minor + 1))
+            patch=0
+            ;;
+          "patch")
+            patch=$((patch + 1))
+            ;;
+        esac
         
         NEW_VERSION="$major.$minor.$patch"
-        echo "🎯 New version: $NEW_VERSION"
+        echo "🎯 New version: $NEW_VERSION (increment: ${{ github.event.inputs.version_type }})"
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
     
     - name: 📦 Create source package
@@ -134,6 +158,44 @@ jobs:
         # Удаляем временную директорию
         rm -rf temp_package
         echo "✅ Source package created: cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz"
+    
+    - name: 📦 Publish to GitHub Packages
+      run: |
+        echo "📦 Publishing to GitHub Packages..."
+        # Создаем package.json для npm package
+        cat > package.json << EOF
+        {
+          "name": "@${{ github.repository_owner }}/cysu",
+          "version": "${{ steps.version.outputs.new_version }}",
+          "description": "Modern educational platform - cysu",
+          "main": "run.py",
+          "scripts": {
+            "start": "python run.py"
+          },
+          "repository": {
+            "type": "git",
+            "url": "https://github.com/${{ github.repository }}.git"
+          },
+          "keywords": ["education", "platform", "flask", "python"],
+          "author": "${{ github.actor }}",
+          "license": "MIT",
+          "files": [
+            "app/",
+            "run.py",
+            "requirements.txt",
+            "Dockerfile",
+            "README.md"
+          ]
+        }
+        EOF
+        
+        # Создаем .npmrc для GitHub Packages
+        echo "@${{ github.repository_owner }}:registry=https://npm.pkg.github.com" > .npmrc
+        echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+        
+        # Публикуем пакет
+        npm publish
+        echo "✅ Package published to GitHub Packages"
     
     - name: 📝 Create GitHub Release with Package
       uses: softprops/action-gh-release@v1
@@ -158,6 +220,7 @@ jobs:
           
           ### 📦 Packages
           - **Source Code**: `cysu-source-v${{ steps.version.outputs.new_version }}.tar.gz`
+          - **NPM Package**: `@${{ github.repository_owner }}/cysu@${{ steps.version.outputs.new_version }}`
           
           ### 🚀 How to use
           ```bash
@@ -171,6 +234,15 @@ jobs:
             ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           ```
           
+          ### 📦 Install from GitHub Packages
+          ```bash
+          # Configure npm for GitHub Packages
+          echo "@${{ github.repository_owner }}:registry=https://npm.pkg.github.com" >> .npmrc
+          
+          # Install package
+          npm install @${{ github.repository_owner }}/cysu@${{ steps.version.outputs.new_version }}
+          ```
+          
           ---
           *🤖 This release was created automatically by GitHub Actions*
         draft: false
@@ -180,13 +252,20 @@ jobs:
     name: 🚀 Deploy Summary
     needs: [build, release]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/TEST'
+    if: always()
     steps:
     - name: 📊 Deployment Summary
       run: |
         echo "🎉 Deployment completed successfully!"
         echo "🐳 Docker Image: ${{ needs.build.outputs.image }}"
         echo "📝 Digest: ${{ needs.build.outputs.digest }}"
-        echo "🏷️ Version: v${{ needs.release.outputs.version }}"
-        echo "📦 Package: cysu-source-v${{ needs.release.outputs.version }}.tar.gz"
-        echo "🔗 Release: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.version }}"
+        echo "🏷️ Commit: ${{ github.sha }}"
+        echo "🔗 Repository: https://github.com/${{ github.repository }}"
+        
+        if [ "${{ needs.release.result }}" == "success" ]; then
+          echo "🚀 Release created: v${{ needs.release.outputs.version }}"
+          echo "📦 Package: cysu-source-v${{ needs.release.outputs.version }}.tar.gz"
+          echo "🔗 Release: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.version }}"
+        else
+          echo "ℹ️ No release created (disabled or failed)"
+        fi
