refactor: reorganize configuration files
Move all configuration files into .configs/ folder for better project structure:
- .prettierrc → .configs/.prettierrc
- .pyproject.toml → .configs/.pyproject.toml
- pyrightconfig.json → .configs/pyrightconfig.json

Keep symlinks in root directory for tool compatibility.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,1 @@
-{
-  "semi": false,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "printWidth": 120
-}
+.configs/.prettierrc
