--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: 🚀 Build & Deploy
+name: Build & Deploy
 
 on:
   workflow_dispatch:
@@ -24,396 +24,86 @@ env:
 
 jobs:
   test:
-    name: 🧪 Tests & Quality
+    name: Tests & Lint
     runs-on: ubuntu-latest
     steps:
-    - name: 📥 Checkout code
+    - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: 🐍 Setup Python
+
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
         cache: 'pip'
-    
-    - name: 📦 Install dependencies
+
+    - name: Install dependencies
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install flake8 bandit safety semgrep radon mypy isort black pip-check pip-audit py-spy
-    
-    - name: 🐳 Install hadolint
+
+    - name: Run tests
       run: |
-        # Устанавливаем hadolint (не Python пакет)
-        wget -O hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64
-        chmod +x hadolint
-        sudo mv hadolint /usr/local/bin/
-    
-    - name: 🔍 Code quality check
-      run: |
-        echo "🔍 Running flake8 analysis..."
-        flake8 app/ run.py --max-line-length=120 --ignore=E501,W503,W293,W291,W292,E302,E303,E305,F401,F841,E402,F541,E128,W391
-        echo "✅ Code quality check passed"
-    
-    - name: 🔒 Security checks
-      run: |
-        echo "🔒 Running security analysis..."
-        
-        # Bandit - security issues
-        echo "Running bandit..."
-        bandit -r app/ run.py -f json -o bandit-report.json || true
-        
-        # Safety - vulnerable dependencies
-        echo "Running safety check..."
-        safety check --json --output safety-report.json || true
-        
-        # Semgrep - security patterns
-        echo "Running semgrep..."
-        semgrep --config=auto app/ run.py --json --output=semgrep-report.json || true
-        
-        # Pip audit
-        echo "Running pip-audit..."
-        pip-audit --format=json --output=pip-audit-report.json || true
-        
-        echo "✅ Security checks completed"
-    
-    - name: 📊 Code analysis
-      run: |
-        echo "📊 Running code analysis..."
-        
-        # Black - code formatting
-        echo "Running black check..."
-        black --check --diff app/ run.py || true
-        
-        # Isort - import sorting
-        echo "Running isort check..."
-        isort --check-only --diff app/ run.py || true
-        
-        # MyPy - type checking
-        echo "Running mypy..."
-        mypy app/ run.py --ignore-missing-imports --json-report mypy-report.json || true
-        
-        # Radon - complexity metrics
-        echo "Running radon analysis..."
-        radon cc app/ run.py --json > radon-report.json || true
-        radon mi app/ run.py --json > radon-mi-report.json || true
-        
-        # Pip check - dependency conflicts
-        echo "Running pip-check..."
-        pip-check --format=json > pip-check-report.json || true
-        
-        echo "✅ Code analysis completed"
-    
-    - name: 🐳 Docker security
-      run: |
-        echo "🐳 Running Docker security check..."
-        
-        # Hadolint - Dockerfile linting
-        echo "Running hadolint..."
-        hadolint Dockerfile --format json > hadolint-report.json || true
-        
-        echo "✅ Docker security check completed"
-    
-    - name: 🧪 Run tests
-      run: |
-        echo "🧪 Running basic tests..."
-        python -c "import app; print('✅ App imports successfully')"
-        echo "✅ Basic tests passed"
+        python -c "import app; print('App imports successfully')"
+        python -c "from app.views.main import main_bp; print('Main views loaded')"
+        python -c "from app.models import Material; print('Models loaded')"
 
   build:
-    name: 🐳 Build Docker Image
+    name: Build Docker Image
     needs: test
     runs-on: ubuntu-latest
-    outputs:
-      image: ${{ steps.build.outputs.image }}
-      digest: ${{ steps.build.outputs.digest }}
     steps:
-    - name: 📥 Checkout code
+    - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: 🐳 Setup Docker Buildx
+
+    - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
-    - name: 🔐 Login to Docker Registry
+
+    - name: Login to Docker Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.DOCKER_REGISTRY }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: 🏗️ Build and push Docker image
-      id: build
+
+    - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
-        tags: |
-          ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        tags: ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        platforms: linux/amd64
 
   release:
-    name: 🚀 Create Release & Package
+    name: Create Release
     needs: build
     runs-on: ubuntu-latest
     if: github.event.inputs.create_release == 'true'
-    outputs:
-      version: ${{ steps.version.outputs.new_version }}
     steps:
-    - name: 📥 Checkout code
+    - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: 🔧 Setup Git
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
-    
-    - name: 📈 Calculate version
+
+    - name: Calculate version
       id: version
       run: |
-        # Получаем последний тег
         LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-        echo "📌 Last tag: $LAST_TAG"
-        
-        # Убираем 'v' префикс если есть
         VERSION_NUMBER=${LAST_TAG#v}
-        echo "📌 Version number: $VERSION_NUMBER"
-        
-        # Парсим версию
         IFS='.' read -r major minor patch <<< "$VERSION_NUMBER"
-        
-        # Увеличиваем версию в зависимости от выбранного типа
         case "${{ github.event.inputs.version_type }}" in
-          "major")
-            major=$((major + 1))
-            minor=0
-          patch=0
-            ;;
-          "minor")
-          minor=$((minor + 1))
-            patch=0
-            ;;
-          "patch")
-            patch=$((patch + 1))
-            ;;
+          "major") ((major++)); minor=0; patch=0;;
+          "minor") ((minor++)); patch=0;;
+          "patch") ((patch++));;
         esac
-        
         NEW_VERSION="$major.$minor.$patch"
-        echo "🎯 New version: $NEW_VERSION (increment: ${{ github.event.inputs.version_type }})"
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-    
-    - name: 📦 Create source package
-      run: |
-        echo "📦 Creating source package..."
-        # Создаем временную директорию для архивации
-        mkdir -p temp_package
-        # Копируем файлы, исключая ненужные
-        rsync -av --exclude='.git' \
-          --exclude='__pycache__' \
-          --exclude='*.pyc' \
-          --exclude='.env' \
-          --exclude='app.db' \
-          --exclude='logs' \
-          --exclude='temp_package' \
-          --exclude='.github/workflows' \
-          . temp_package/
-        # Создаем архив из временной директории
-        tar -czf cysu-v${{ steps.version.outputs.new_version }}.tar.gz -C temp_package .
-        # Удаляем временную директорию
-        rm -rf temp_package
-        echo "✅ Source package created: cysu-v${{ steps.version.outputs.new_version }}.tar.gz"
-    
-    - name: 📦 Publish to GitHub Packages
-      run: |
-        echo "📦 Publishing to GitHub Packages..."
-        # Создаем package.json для npm package
-        cat > package.json << EOF
-        {
-          "name": "@${{ github.repository_owner }}/cysu",
-          "version": "${{ steps.version.outputs.new_version }}",
-          "description": "Modern educational platform - cysu",
-          "main": "run.py",
-          "scripts": {
-            "start": "python run.py"
-          },
-          "repository": {
-            "type": "git",
-            "url": "git+https://github.com/${{ github.repository }}.git"
-          },
-          "keywords": ["education", "platform", "flask", "python"],
-          "author": "${{ github.actor }}",
-          "license": "MIT",
-          "files": [
-            "app/",
-            "run.py",
-            "requirements.txt",
-            "Dockerfile",
-            "README.md"
-          ]
-        }
-        EOF
-        
-        # Создаем .npmrc для GitHub Packages
-        echo "@${{ github.repository_owner }}:registry=https://npm.pkg.github.com" > .npmrc
-        echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
-        
-        # Пытаемся опубликовать пакет, игнорируем ошибку конфликта версий
-        npm publish || echo "⚠️ Package version already exists, skipping publish"
-        echo "✅ Package publish attempt completed"
-    
-    - name: 📊 Generate analysis report
-      run: |
-        echo "📊 Generating analysis report..."
-        
-        # Создаем отчет в JSON формате
-        cat > analysis-report.json << EOF
-        {
-          "version": "${{ steps.version.outputs.new_version }}",
-          "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
-          "checks": {
-            "flake8": {
-              "status": "✅ Passed",
-              "description": "Code style and quality"
-            },
-            "bandit": {
-              "status": "✅ Completed",
-              "description": "Security vulnerability scan"
-            },
-            "safety": {
-              "status": "✅ Completed", 
-              "description": "Dependency vulnerability check"
-            },
-            "semgrep": {
-              "status": "✅ Completed",
-              "description": "Security pattern detection"
-            },
-            "pip-audit": {
-              "status": "✅ Completed",
-              "description": "Dependency audit"
-            },
-            "black": {
-              "status": "✅ Completed",
-              "description": "Code formatting check"
-            },
-            "isort": {
-              "status": "✅ Completed",
-              "description": "Import sorting check"
-            },
-            "mypy": {
-              "status": "✅ Completed",
-              "description": "Static type checking"
-            },
-            "radon": {
-              "status": "✅ Completed",
-              "description": "Code complexity metrics"
-            },
-            "pip-check": {
-              "status": "✅ Completed",
-              "description": "Dependency conflict check"
-            },
-            "hadolint": {
-              "status": "✅ Completed",
-              "description": "Dockerfile linting"
-            },
-            "py-spy": {
-              "status": "✅ Available",
-              "description": "Performance profiling tool"
-            }
-          }
-        }
-        EOF
-        
-        echo "✅ Analysis report generated"
-    
-    - name: 📝 Create GitHub Release with Package
+
+    - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: cysu-v${{ steps.version.outputs.new_version }}.tar.gz
         tag_name: v${{ steps.version.outputs.new_version }}
-        name: 🚀 Release v${{ steps.version.outputs.new_version }}
+        name: Release v${{ steps.version.outputs.new_version }}
         generate_release_notes: true
-        body: |
-          ## 🔍 Quality & Security Analysis
-          
-          | Tool | Status | Description |
-          |------|--------|-------------|
-          | **flake8** | ✅ Passed | Code style and quality |
-          | **bandit** | ✅ Completed | Security vulnerability scan |
-          | **safety** | ✅ Completed | Dependency vulnerability check |
-          | **semgrep** | ✅ Completed | Security pattern detection |
-          | **pip-audit** | ✅ Completed | Dependency audit |
-          | **black** | ✅ Completed | Code formatting check |
-          | **isort** | ✅ Completed | Import sorting check |
-          | **mypy** | ✅ Completed | Static type checking |
-          | **radon** | ✅ Completed | Code complexity metrics |
-          | **pip-check** | ✅ Completed | Dependency conflict check |
-          | **hadolint** | ✅ Completed | Dockerfile linting |
-          | **py-spy** | ✅ Available | Performance profiling tool |
-          
-          ### 🐍 Environment
-          - **Python Version**: 3.11
-          - **Flask Version**: 2.3.3
-          - **Dependencies**: All checked for vulnerabilities
-          
-          ### 🐳 Docker Images
-          - **Latest**: `${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest`
-          - **Tagged**: `${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}`
-          
-          ### 📦 Packages
-          - **Source Code**: `cysu-v${{ steps.version.outputs.new_version }}.tar.gz`
-          - **NPM Package**: `@${{ github.repository_owner }}/cysu@${{ steps.version.outputs.new_version }}`
-          
-          ### 🚀 How to use
-          ```bash
-          # Pull latest image
-          docker pull ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          
-          # Run container
-          docker run -d -p 8001:8001 \
-            -e SECRET_KEY=your-secret-key \
-            -e DATABASE_URL=sqlite:///app.db \
-            ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          ```
-          
-          ### 📦 Install from GitHub Packages
-          ```bash
-          # Configure npm for GitHub Packages
-          echo "@${{ github.repository_owner }}:registry=https://npm.pkg.github.com" >> .npmrc
-          
-          # Install package
-          npm install @${{ github.repository_owner }}/cysu@${{ steps.version.outputs.new_version }}
-          ```
-          
-          ---
-          *🤖 This release was created automatically by GitHub Actions*
-        draft: false
-        prerelease: false
-    
-  deploy:
-    name: 🚀 Deploy Summary
-    needs: [build, release]
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-    - name: 📊 Deployment Summary
-      run: |
-        echo "🎉 Deployment completed successfully!"
-        echo "🐳 Docker Image: ${{ needs.build.outputs.image }}"
-        echo "📝 Digest: ${{ needs.build.outputs.digest }}"
-        echo "🏷️ Commit: ${{ github.sha }}"
-        echo "🔗 Repository: https://github.com/${{ github.repository }}"
-        
-        if [ "${{ needs.release.result }}" == "success" ]; then
-          echo "🚀 Release created: v${{ needs.release.outputs.version }}"
-          echo "📦 Package: cysu-v${{ needs.release.outputs.version }}.tar.gz"
-          echo "🔗 Release: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.version }}"
-        else
-          echo "ℹ️ No release created (disabled or failed)"
-        fi
