--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,14 +87,20 @@ jobs:
 
     - name: Calculate version
       id: version
+      env:
+        VERSION_TYPE: ${{ github.event.inputs.version_type }}
       run: |
         LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
         VERSION_NUMBER=${LAST_TAG#v}
         IFS='.' read -r major minor patch <<< "$VERSION_NUMBER"
-        case "${{ github.event.inputs.version_type }}" in
+        echo "Current version: $VERSION_NUMBER ($LAST_TAG)"
+        echo "Version type: $VERSION_TYPE"
+
+        case "$VERSION_TYPE" in
           "major") ((major++)); minor=0; patch=0;;
           "minor") ((minor++)); patch=0;;
           "patch") ((patch++));;
+          *) echo "Invalid version type: $VERSION_TYPE"; exit 1;;
         esac
         NEW_VERSION="$major.$minor.$patch"
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
