--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,9 +87,9 @@ jobs:
 
     - name: Calculate version
       id: version
-      env:
-        VERSION_TYPE: ${{ github.event.inputs.version_type }}
+      shell: bash
       run: |
+        VERSION_TYPE="${{ github.event.inputs.version_type }}"
         LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
         VERSION_NUMBER=${LAST_TAG#v}
         major=$(echo "$VERSION_NUMBER" | cut -d'.' -f1)
@@ -100,16 +100,29 @@ jobs:
         echo "Version type: $VERSION_TYPE"
         echo "Parsed: major=$major, minor=$minor, patch=$patch"
 
-        case "$VERSION_TYPE" in
-          "major") major=$((major + 1)); minor=0; patch=0;;
-          "minor") minor=$((minor + 1)); patch=0;;
-          "patch") patch=$((patch + 1));;
-          *) echo "Invalid version type: $VERSION_TYPE"; exit 1;;
-        esac
+        if [ "$VERSION_TYPE" = "major" ]; then
+          major=$((major + 1))
+          minor=0
+          patch=0
+        elif [ "$VERSION_TYPE" = "minor" ]; then
+          minor=$((minor + 1))
+          patch=0
+        elif [ "$VERSION_TYPE" = "patch" ]; then
+          patch=$((patch + 1))
+        else
+          echo "Invalid version type: $VERSION_TYPE"
+          echo "Valid options: major, minor, patch"
+          exit 1
+        fi
 
         NEW_VERSION="$major.$minor.$patch"
         echo "New version: $NEW_VERSION"
-        echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+        {
+          echo "new_version=$NEW_VERSION"
+          echo "major=$major"
+          echo "minor=$minor"
+          echo "patch=$patch"
+        } >> $GITHUB_OUTPUT
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
